--- a/tests/v5-java-helm-complete-test-bar/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-complete-test-bar/helm/values-devopslab-dev.yaml
@@ -50,7 +50,7 @@ microservice-chart:
       - name: logs
         mountPath: /app/logs
 
-  # persistentVolumeMounts:
+  # persistentVolumeClaimsMounts:
   #   create: true
   #   mounts:
   #     - name: pdf-pvc
