added tests for startup probe

--- a/tests/v5-java-helm-complete-test-bar/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-complete-test-bar/helm/values-devopslab-dev.yaml
@@ -61,11 +61,20 @@ microservice-chart:
     httpGet:
       path: /status/live
       port: 8080
-    initialDelaySeconds: 30
+    initialDelaySeconds: 10
     failureThreshold: 6
     periodSeconds: 10
 
   readinessProbe:
+    httpGet:
+      path: /status/ready
+      port: 8080
+    initialDelaySeconds: 30
+    failureThreshold: 6
+    periodSeconds: 10
+
+  startupProbe:
+    create: true
     httpGet:
       path: /status/ready
       port: 8080
