added example for startupProbe

--- a/tests/v5-java-helm-complete-test-bar/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-complete-test-bar/helm/values-devopslab-dev.yaml
@@ -75,10 +75,13 @@ microservice-chart:
 
   startupProbe:
     create: true
+    handlerType: "exec"
+    exec:
+      command: ["/bin/sh", "-c", '[ -d "/csv" ]']
     httpGet:
       path: /status/ready
       port: 8080
-    initialDelaySeconds: 30
+    initialDelaySeconds: 1
     failureThreshold: 6
     periodSeconds: 10
 
