--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -43,10 +43,19 @@ spec:
               containerPort: {{ . }}
               protocol: TCP
           {{- end }}
+          #
+          # PROBES
+          #
+          ### LIVENESS
+          {{- if .Values.livenessProbe.create }}
           livenessProbe:
             {{- if eq .Values.livenessProbe.handlerType "tcpSocket" }}
             tcpSocket:
               port: {{ .Values.livenessProbe.tcpSocket.port }}
+            {{ else if eq .Values.livenessProbe.handlerType "exec" }}
+            exec:
+              command:
+                {{- toYaml .Values.startupProbe.exec.command | nindent 16 }}
             {{- else }}
             httpGet:
               path: {{ .Values.livenessProbe.httpGet.path }}
@@ -55,10 +64,17 @@ spec:
             initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
             failureThreshold: {{ .Values.livenessProbe.failureThreshold }}
             periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
+          {{- end}}
+          ### READINESS
+          {{- if .Values.readinessProbe.create }}
           readinessProbe:
             {{- if eq .Values.readinessProbe.handlerType "tcpSocket" }}
             tcpSocket:
               port: {{ .Values.readinessProbe.tcpSocket.port }}
+            {{ else if eq .Values.readinessProbe.handlerType "exec" }}
+            exec:
+              command:
+                {{- toYaml .Values.startupProbe.exec.command | nindent 16 }}
             {{- else }}
             httpGet:
               path: {{ .Values.readinessProbe.httpGet.path }}
@@ -67,6 +83,29 @@ spec:
             initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
             failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
             periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
+          {{- end}}
+          ### STARTUP
+          {{- if .Values.startupProbe.create }}
+          startupProbe:
+            {{- if eq .Values.startupProbe.handlerType "tcpSocket" }}
+            tcpSocket:
+              port: {{ .Values.startupProbe.tcpSocket.port }}
+            {{ else if eq .Values.startupProbe.handlerType "exec" }}
+            exec:
+              command:
+                {{- toYaml .Values.startupProbe.exec.command | nindent 16 }}
+            {{- else }}
+            httpGet:
+              path: {{ .Values.startupProbe.httpGet.path }}
+              port: {{ .Values.startupProbe.httpGet.port }}
+            {{- end}}
+            initialDelaySeconds: {{ .Values.startupProbe.initialDelaySeconds }}
+            failureThreshold: {{ .Values.startupProbe.failureThreshold }}
+            periodSeconds: {{ .Values.startupProbe.periodSeconds }}
+          {{- end}}
+          #
+          # RESOURCE
+          #
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
