--- a/tests/v5-java-helm-complete-test-bar/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-complete-test-bar/helm/values-devopslab-dev.yaml
@@ -61,7 +61,7 @@ microservice-chart:
     httpGet:
       path: /status/live
       port: 8080
-    initialDelaySeconds: 30
+    initialDelaySeconds: 10
     failureThreshold: 6
     periodSeconds: 10
 
@@ -70,6 +70,18 @@ microservice-chart:
       path: /status/ready
       port: 8080
     initialDelaySeconds: 30
+    failureThreshold: 6
+    periodSeconds: 10
+
+  startupProbe:
+    create: true
+    handlerType: "exec"
+    exec:
+      command: ["/bin/sh", "-c", '[ -d "/csv" ]']
+    httpGet:
+      path: /status/ready
+      port: 8080
+    initialDelaySeconds: 1
     failureThreshold: 6
     periodSeconds: 10
 
