Added tests example for container command and args

--- a/tests/v5-java-helm-complete-test-bar/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-complete-test-bar/helm/values-devopslab-dev.yaml
@@ -57,6 +57,10 @@ microservice-chart:
         mountPath: /csv
         pvcName: blueprint-file-share-zrs
 
+  # container:
+  #   command: ["printenv"]
+  #   args: ["HOSTNAME", "KUBERNETES_PORT"]
+
   livenessProbe:
     httpGet:
       path: /status/live
