fix readines and liveness typo

--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -63,7 +63,7 @@ spec:
             {{ else if eq .Values.livenessProbe.handlerType "exec" }}
             exec:
               command:
-                {{- toYaml .Values.startupProbe.exec.command | nindent 16 }}
+                {{- toYaml .Values.livenessProbe.exec.command | nindent 16 }}
             {{- else }}
             httpGet:
               path: {{ .Values.livenessProbe.httpGet.path }}
@@ -82,7 +82,7 @@ spec:
             {{ else if eq .Values.readinessProbe.handlerType "exec" }}
             exec:
               command:
-                {{- toYaml .Values.startupProbe.exec.command | nindent 16 }}
+                {{- toYaml .Values.readinessProbe.exec.command | nindent 16 }}
             {{- else }}
             httpGet:
               path: {{ .Values.readinessProbe.httpGet.path }}
