--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -191,6 +191,7 @@ spec:
                   name: {{ include "microservice-chart.fullname" $ }}
                   key: {{ $key }}
             {{- end }}
+            {{- end }}
             # Secret provider class
             {{- if or .Values.secretProviderClass.create }}
             {{- if .Values.canaryDelivery.create }}
