--- a/tests/v5-java-helm-complete-test-canary/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-complete-test-canary/helm/values-devopslab-dev.yaml
@@ -6,10 +6,11 @@ microservice-chart:
     replicas: 1
 
   envConfig:
-    APP: foo
-    MY_APP_COLOR: "green"
+    TO_OVERWRITE: "original-value"
+    COMMON: "same"
 
   envSecret:
+    SEC_TO_OVERWRITE: dvopla-d-neu-dev01-aks-apiserver-url
     MY_KV_SECRET: dvopla-d-neu-dev01-aks-apiserver-url
 
   externalConfigMapFiles:
@@ -155,3 +156,21 @@ microservice-chart:
               aadpodidbinding: blueprint-pod-identity
           namespaces: ["blueprint"]
           topologyKey: topology.kubernetes.io/zone
+
+  canaryDelivery:
+    create: true
+    ingress:
+        headerName: X-Canary
+        headerValue: canary
+        weightPercent: 50
+    image:
+      repository: ghcr.io/pagopa/devops-java-springboot-color
+      tag: 0.9.0
+    envConfig:
+      TO_OVERWRITE: "over-witten"
+      NEW_ITEM: "new item"
+      MY_MANDATORY_VALUE: "mandatory"
+    envSecret:
+      SEC_NEW_ITEM: 'canary-new-item'
+      SEC_TO_OVERWRITE: 'canary'
+      MY_MANDATORY_SECRET: 'canary'
