feat: Improved Canary delivery (#99)

--- a/charts/microservice-chart/templates/configmap.yaml
+++ b/charts/microservice-chart/templates/configmap.yaml
@@ -9,12 +9,19 @@ metadata:
 data:
   {{- if .Values.canaryDelivery.create }}
   CANARY: "true"
+  {{- if .Values.envConfig -}}
+  {{- toYaml (mergeOverwrite .Values.envConfig .Values.canaryDelivery.envConfig) | nindent 2 }}
   {{- end }}
+  {{- if .Values.configMapFromFile -}}
+  {{- toYaml .Values.configMapFromFile | nindent 2 }}
+  {{- end }}
+  {{- else }}
   {{- if .Values.envConfig -}}
   {{- toYaml .Values.envConfig | nindent 2 }}
   {{- end }}
   {{- if .Values.configMapFromFile -}}
   {{- toYaml .Values.configMapFromFile | nindent 2 }}
+  {{- end }}
   {{- end }}
 {{- end }}
 
