--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -35,7 +35,11 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
+          {{- if .Values.canaryDelivery.create }}
+          image: "{{ .Values.canaryDelivery.image.repository }}:{{ .Values.canaryDelivery.image.tag | default .Chart.AppVersion }}"
+          {{- else }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          {{- end }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
           {{- range .Values.service.ports }}
@@ -171,21 +175,41 @@ spec:
             {{- end }}
           env:
             #envConfig
-            {{- range $key, $val := .Values.envConfig }}
+            {{- if .Values.canaryDelivery.create }}
+            {{- range $key, $val := (mergeOverwrite .Values.envConfig .Values.canaryDelivery.envConfig) }}
             - name: {{ $key }}
               valueFrom:
                 configMapKeyRef:
                   name: {{ include "microservice-chart.fullname" $ }}
                   key: {{ $key }}
             {{- end }}
+            {{- else }}
+            {{- range $key, $val :=.Values.envConfig }}
+            - name: {{ $key }}
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ include "microservice-chart.fullname" $ }}
+                  key: {{ $key }}
+            {{- end }}
+            {{- end }}
             # Secret provider class
             {{- if or .Values.secretProviderClass.create }}
+            {{- if .Values.canaryDelivery.create }}
+            {{- range $name, $value := (mergeOverwrite .Values.envSecret .Values.canaryDelivery.envSecret) }}
+            - name: {{ $name }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "microservice-chart.fullname" $ }}
+                  key: {{ $value }}
+            {{- end }}
+            {{- else }}
             {{- range $name, $value := .Values.envSecret }}
             - name: {{ $name }}
               valueFrom:
                 secretKeyRef:
                   name: {{ include "microservice-chart.fullname" $ }}
                   key: {{ $value }}
+            {{- end }}
             {{- end }}
             {{- end }}
             #envConfig CANARY
