--- a/tests/v2-migration-java-helm-complete-test/helm/templates/configmaps.yaml
+++ b/tests/v2-migration-java-helm-complete-test/helm/templates/configmaps.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: v2-migration-configmap-games
-  namespace: blueprint
+  namespace: testit
 data:
   # property-like keys; each key maps to a simple value
   player-initial-lives: "3"
@@ -23,7 +23,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: v2-migration-configmap-mongodb
-  namespace: blueprint
+  namespace: testit
 data:
   # Configuration values can be set as key-value properties
   database: mongodb
