--- a/tests/v5-java-helm-basic-test/helm/templates/external-configmaps.yaml
+++ b/tests/v5-java-helm-basic-test/helm/templates/external-configmaps.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: v5-basic-external-configmap
-  namespace: "blueprint"
+  namespace: "testit"
 data:
   # property-like keys; each key maps to a simple value
   player_initial_lives: "3"
@@ -24,7 +24,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: v5-basic-external-configmap-values
-  namespace: "blueprint"
+  namespace: "testit"
 data:
   # Configuration values can be set as key-value properties
   database: mongodb
