--- a/tests/v5-java-helm-basic-test/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-basic-test/helm/values-devopslab-dev.yaml
@@ -1,5 +1,5 @@
 microservice-chart:
-  namespace: "blueprint"
+  namespace: "testit"
 
   deployment:
     create: true
@@ -10,7 +10,7 @@ microservice-chart:
     MY_APP_COLOR: "green"
 
   envSecret:
-    MY_KV_SECRET: dvopla-d-neu-dev01-aks-apiserver-url
+    MY_KV_SECRET: dvopla-d-itn-dev-aks-apiserver-url
 
   image:
     repository: ghcr.io/pagopa/devops-java-springboot-color
@@ -49,8 +49,8 @@ microservice-chart:
 
   ingress:
     create: true
-    host: dev01.blueprint.internal.devopslab.pagopa.it
-    path: /blueprint/v5-java-helm-basic-test(/|$)(.*)
+    host: testit.itn.internal.devopslab.pagopa.it
+    path: /testit/v5-java-helm-basic-test(/|$)(.*)
     rewriteTarget: /$2
     servicePort: 8080
 
@@ -63,7 +63,7 @@ microservice-chart:
       cpu: "150m"
 
   keyvault:
-    name: "dvopla-d-blueprint-kv"
+    name: "dvopla-d-testit-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   podDisruptionBudget:
@@ -85,6 +85,6 @@ microservice-chart:
         podAffinityTerm:
           labelSelector:
             matchLabels:
-              aadpodidbinding: blueprint-pod-identity
-          namespaces: ["blueprint"]
+              aadpodidbinding: testit-pod-identity
+          namespaces: ["testit"]
           topologyKey: topology.kubernetes.io/zone
