--- a/tests/v2-migration-java-helm-complete-test/helm/v5-values-devopslab-dev.yaml
+++ b/tests/v2-migration-java-helm-complete-test/helm/v5-values-devopslab-dev.yaml
@@ -153,7 +153,7 @@ microservice-chart:
           value: "60"
 
   keyvault:
-    name: "dvopla-d-testit-kv"
+    name: "dvopla-d-itn-testit-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   podDisruptionBudget:
