--- a/tests/v5-java-helm-basic-test/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-basic-test/helm/values-devopslab-dev.yaml
@@ -63,7 +63,7 @@ microservice-chart:
       cpu: "150m"
 
   keyvault:
-    name: "dvopla-d-testit-kv"
+    name: "dvopla-d-itn-testit-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   podDisruptionBudget:
