--- a/tests/v5-java-helm-complete-test-foo/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-complete-test-foo/helm/values-devopslab-dev.yaml
@@ -17,6 +17,7 @@ microservice-chart:
     configMaps:
       - name: v5-complete-foo-configmap-files
         key: game.properties
+        mountPath: "/config/games.properties"
       - name: v5-complete-foo-configmap-files
         key: user-interface.xml
 
